--- a/serverless.yml
+++ b/serverless.yml
@@ -11,6 +11,8 @@ provider:
   name: aws
   runtime: nodejs12.x
   memorySize: 256
+  apiGateway:
+    shouldStartNameWithService: true
   stage: ${opt:stage, 'dev'}
   region: eu-west-2
   environment:
@@ -55,6 +57,11 @@ functions:
       - http:
           method: PATCH
           path: /auctions/{id}/bid
+
+  processAuctions:
+    handler: src/handlers/processAuctions.handler
+    # events:
+    #   - schedule: rate(1 minute)
 
 custom:
   AuctionsTable:
