--- a/serverless.yml
+++ b/serverless.yml
@@ -17,8 +17,10 @@ provider:
   region: eu-west-2
   environment:
     AUCTIONS_TABLE_NAME: ${self:custom.AuctionsTable.name}
+    MAIL_QUEUE_URL: ${self:custom.MailQueue.url}
   iamRoleStatements:
     - ${file(iam/auctions-table-iam.yml):AuctionsTableIAM}
+    - ${file(iam/mail-queue-iam.yml):MailQueueIAM}
 
 resources:
   # we are now in AWS world
@@ -74,5 +76,9 @@ custom:
   AuctionsTable:
     name: !Ref AuctionsTable
     arn: !GetAtt AuctionsTable.Arn
+  MailQueue:
+    # adding a cf (CloudFormation) dependency via stack name
+    arn: ${cf:serverless-notification-${self:provider.stage}.MailQueueArn}
+    url: ${cf:serverless-notification-${self:provider.stage}.MailQueueUrl}
   bundle:
     linting: false
