--- a/serverless.yml
+++ b/serverless.yml
@@ -39,6 +39,7 @@ functions:
       - http:
           method: POST
           path: /auctions
+          cors: true
           authorizer: ${self:custom.authorizer}
           
     # package:
@@ -52,6 +53,7 @@ functions:
       - http:
           method: GET
           path: /auctions
+          cors: true
           authorizer: ${self:custom.authorizer}
 
   getAuction:
@@ -60,6 +62,7 @@ functions:
       - http:
           method: GET
           path: /auctions/{id}
+          cors: true
           authorizer: ${self:custom.authorizer}
 
   placeBid:
@@ -68,6 +71,7 @@ functions:
       - http:
           method: PATCH
           path: /auctions/{id}/bid
+          cors: true
           authorizer: ${self:custom.authorizer}
 
   uploadAuctionPicture:
@@ -76,6 +80,7 @@ functions:
       - http:
           method: PATCH
           path: /auctions/{id}/picture
+          cors: true
           authorizer: ${self:custom.authorizer}
 
   processAuctions:
